--- a/EserciziSettimana01/day4_30_03_23/assetts/css/style.css
+++ b/EserciziSettimana01/day4_30_03_23/assetts/css/style.css
@@ -11,6 +11,7 @@ html, body {
     background-attachment: scroll;
     background-size: auto;
     text-align: left;
+    line-height: 1.5;
 }
 
 header,main {
