progetto settimana 1 + extra

--- a/EserciziSettimana01/ProgettoSettimana1_31_03_23/assetts/css/style-desktop.css
+++ b/EserciziSettimana01/ProgettoSettimana1_31_03_23/assetts/css/style-desktop.css
@@ -130,6 +130,8 @@ html, body {
 .card{
     border: 1px solid #dee1e3;
     margin: 0px 30px 90px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
 .card img{
