--- a/BuildWeek1/assets/css/style.css
+++ b/BuildWeek1/assets/css/style.css
@@ -2,8 +2,6 @@
 
 
 body {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
     background-image: url(../img/bg.jpg);
     background-repeat: no-repeat;
@@ -14,8 +12,9 @@ body {
     font-family: 'Inter', sans-serif;
 }
 
-.container{
-    margin: auto;
+#welcomeContainer {
+    margin: 0 7%;
+    margin-top: 3%;
 }
 
 /******************************* HEADER **************************/
@@ -36,10 +35,6 @@ body {
 }
 
 /************************ INSTRUCTIONS SECTION ******************/
-
-#welcomeContainer h3 {
-    margin: 0;
-}
 
 #istructionsTitle {
     font-size: 2.5em;
@@ -65,15 +60,15 @@ body {
     font-size: 1.4em;
 }
 
+/************************* CHOOSE THE DIFFICULT ************************/
 
-#formCheck {
-    display: inline-block;
-    font-weight: 500;
-    font-size: 1.1em;
+#welcomeContainer h3{
+    margin: 0;
 }
 
 #boxButton {
     display: inline-block;
+    margin-left: 50%;
 }
 
 .blueButton {
@@ -93,12 +88,72 @@ body {
     filter: drop-shadow(0 0 20px #d20094) contrast(2) brightness(2);
 }
 
-#selectDifficult {
-    border: 1px solid #ccc;
-    padding: 8px;
-    font-size: 16px;
-    background-color: #fff;
+select {
+    /* Reset Select */
+    appearance: none;
+    border: 0;
+    box-shadow: none;
+    /* Personalize */
+    flex: 1;
+    background-color: white;
     cursor: pointer;
-    width: 200px;
-    margin-bottom: 20px;
+}
+
+/* Remove IE arrow */
+select::-ms-expand {
+    display: none;
+}
+
+/* Custom Select wrapper */
+.select {
+    position: relative;
+    display: flex;
+    width: 10em;
+    height: 2em;
+    border-radius: .25em;
+    overflow: hidden;
+
+}
+
+/* Arrow */
+.select::after {
+    content: '\25BC';
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 5%;
+    background-color: #131a59;
+    pointer-events: none;
+}
+
+/* Transition */
+.select:hover::after {
+    color: #1234f3;
+}
+
+/**************************** CHECKBOX PROMISE **********************/
+
+#terms {
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    border: 2px solid white;
+    appearance: none;
+    margin: 8% 0 0 0;
+}
+
+#labelCheckbox {
+    margin-left: 10px;
+    position: absolute;
+    margin: 13px 0 0 10px;
+}
+
+#terms:checked {
+    background-color: #d20094;
+}
+
+#formCheck {
+    display: inline-block;
+    font-weight: 500;
+    font-size: 1.1em;
 }
