--- a/BuildWeek1/assets/css/style.css
+++ b/BuildWeek1/assets/css/style.css
@@ -1,159 +1,211 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 body {
-    box-sizing: border-box;
-    background-image: url(../img/bg.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: left;
-    color: white;
-    font-family: 'Inter', sans-serif;
+  box-sizing: border-box;
+  background-image: url(../img/bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: left;
+  color: white;
+  font-family: "Inter", sans-serif;
 }
 
 .container {
-    margin: 0 7%;
-    margin-top: 3%;
+  margin: 0 7%;
+  margin-top: 3%;
 }
 
 /******************************* HEADER **************************/
 
 #logoEpicode {
-    width: 20em;
+  width: 20em;
 }
 
 /******************************** MAIN **************************/
 
 #welcomeContainer h1 {
-    font-family: 'Outfit', sans-serif;
-    font-size: 8em;
-    line-height: 0.8em;
-    margin-top: 0.8em;
-    margin-bottom: 0.5em;
-    font-weight: 400;
+  font-family: "Outfit", sans-serif;
+  font-size: 8em;
+  line-height: 0.8em;
+  margin-top: 0.8em;
+  margin-bottom: 0.5em;
+  font-weight: 400;
 }
 
 /************************ INSTRUCTIONS SECTION ******************/
 
 #istructionsTitle {
-    font-size: 2.5em;
-    font-weight: 700;
-    font-family: 'Outfit', sans-serif;
-    margin: 0;
+  font-size: 2.5em;
+  font-weight: 700;
+  font-family: "Outfit", sans-serif;
+  margin: 0;
 }
 
 .purple {
-    color: #C2128D;
+  color: #c2128d;
 }
 
 #welcomeContainer p {
-    font-size: 1.4em;
+  font-size: 1.4em;
 }
 
 #welcomeContainer ul {
-    margin: 3em 0 7em 0;
+  margin: 3em 0 7em 0;
 }
 
 #welcomeContainer li {
-    line-height: 1.8em;
-    font-size: 1.4em;
+  line-height: 1.8em;
+  font-size: 1.4em;
 }
 
 /************************* CHOOSE THE DIFFICULT ************************/
 
-#welcomeContainer h3{
-    margin: 0;
+#welcomeContainer h3 {
+  margin: 0;
 }
 
 #boxButton {
-    display: inline-block;
-    margin-left: 50%;
+  display: inline-block;
+  margin-left: 50%;
 }
 
 .blueButton {
-    color: #232B5E;
-    background-color: #00ffff;
-    border: 1px solid #00ffff;
-    padding: 15px 70px;
-    font-size: 1.6em;
-    font-weight: bold;
-    cursor: pointer;
-    filter: drop-shadow(0 0 15px #00ffff) drop-shadow(0 0 50px #00ffff) contrast(2) brightness(2);
+  color: #232b5e;
+  background-color: #00ffff;
+  border: 1px solid #00ffff;
+  padding: 15px 70px;
+  font-size: 1.6em;
+  font-weight: bold;
+  cursor: pointer;
+  filter: drop-shadow(0 0 15px #00ffff) drop-shadow(0 0 50px #00ffff)
+    contrast(2) brightness(2);
 }
 
 .blueButton:hover {
-    color: #232B5E;
-    background-color: #d20094;
-    filter: drop-shadow(0 0 20px #d20094) contrast(2) brightness(2);
+  color: #232b5e;
+  background-color: #d20094;
+  filter: drop-shadow(0 0 20px #d20094) contrast(2) brightness(2);
 }
 
 select {
-    /* Reset Select */
-    appearance: none;
-    border: 0;
-    box-shadow: none;
-    /* Personalize */
-    flex: 1;
-    background-color: white;
-    cursor: pointer;
+  /* Reset Select */
+  appearance: none;
+  border: 0;
+  box-shadow: none;
+  /* Personalize */
+  flex: 1;
+  background-color: white;
+  cursor: pointer;
 }
 
 /* Remove IE arrow */
 select::-ms-expand {
-    display: none;
+  display: none;
 }
 
 /* Custom Select wrapper */
 .select {
-    position: relative;
-    display: flex;
-    width: 10em;
-    height: 2em;
-    border-radius: .25em;
-    overflow: hidden;
-
+  position: relative;
+  display: flex;
+  width: 10em;
+  height: 2em;
+  border-radius: 0.25em;
+  overflow: hidden;
 }
 
 /* Arrow */
 .select::after {
-    content: '\25BC';
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding: 5%;
-    background-color: #131a59;
-    pointer-events: none;
+  content: "\25BC";
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 5%;
+  background-color: #131a59;
+  pointer-events: none;
 }
 
 /* Transition */
 .select:hover::after {
-    color: #1234f3;
+  color: #1234f3;
 }
 
 /**************************** CHECKBOX PROMISE **********************/
 
 #terms {
-    width: 20px;
-    height: 20px;
-    cursor: pointer;
-    border: 2px solid white;
-    appearance: none;
-    margin: 8% 0 0 0;
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  border: 2px solid white;
+  appearance: none;
+  margin: 8% 0 0 0;
 }
 
 #labelCheckbox {
-    margin-left: 10px;
-    position: absolute;
-    margin: 13px 0 0 10px;
+  margin-left: 10px;
+  position: absolute;
+  margin: 13px 0 0 10px;
 }
 
 #terms:checked {
-    background-color: #d20094;
+  background-color: #d20094;
 }
 
 #formCheck {
-    display: inline-block;
-    font-weight: 500;
-    font-size: 1.1em;
+  display: inline-block;
+  font-weight: 500;
+  font-size: 1.1em;
+}
+
+/*PAGINA HTML RESULT */
+#resultsContainer {
+  text-align: center;
+}
+
+#headerResult {
+  text-align: left;
+}
+
+#logoEpicode {
+  width: 10em;
+}
+
+#resultTitle {
+  font-size: 2em;
+  line-height: 0.8em;
+  margin-top: 0.8em;
+  margin-bottom: 0.5em;
+  font-weight: 400;
+  font-family: "Outfit", sans-serif;
+}
+
+#resultTitle h2 {
+  font-weight: 100;
+  font-size: smaller;
+  font-family: "Outfit", sans-serif;
+  margin: 0;
+}
+#resultTitle h1 {
+  margin-bottom: 0.3em;
+}
+#graphicResults {
+  text-align: center;
+}
+
+.align {
+  display: inline-block;
+margin: 3em;
+}
+
+#buttonRateUs {
+  text-align: center;
+}
+
+#rateUs {
+  color: white;
+  background-color: transparent;
+  padding: 0.7em 3em;
+  font-weight: bold;
+  font-size: 1.3em;
+  border: solid 2px white;
 }
