--- a/BuildWeek1/assets/css/style.css
+++ b/BuildWeek1/assets/css/style.css
@@ -180,6 +180,76 @@ input[type="checkbox"]:checked::before {
   border: solid 2px white;
 }
 
+/***************** QUESTION PAGE ***********************/
+
+#timer {
+  margin: 0 150px;
+  text-align: center;
+  float: right;
+}
+
+#seconds {
+  font-size: 3.5em;
+  margin: 0;
+  line-height: 65px;
+}
+
+.innerP {
+  margin: 0;
+  font-size: 0.7em;
+}
+
+#questionContainer {
+  text-align: center;
+}
+
+#headerQuestion {
+  text-align: left;
+}
+
+#question {
+  font-size: 3em;
+  margin-top: 200px;
+}
+
+.btnAnswer {
+  background: rgba(197, 154, 154, 0.1);
+  border-radius: 60px;
+  font-size: 1.5em;
+  color:white;
+  margin: 30px;
+  box-shadow: 0 -3.2px 0.4px white;
+  box-sizing: border-box;
+  width: 570px;
+  height: 100px;
+}
+
+
+
+#answers {
+  padding: 5em;
+  margin-bottom: 80px;
+}
+
+#questionNumber {
+  font-size: 2em;
+}
+
+.btnAnswer:hover {
+  cursor: pointer;
+  color:white;
+  background-color: rgba(60, 53, 53, 0);;
+}
+
+.btnAnswerPurple:hover{
+  background-color:  #B40089;
+}
+
+.btnAnswerPurple{
+  background-color:  #B40089;
+  color: white;
+}
+
 /**************************** RESULT PAGE **********************/
 #resultsContainer {
   text-align: center;
@@ -261,69 +331,7 @@ input[type="checkbox"]:checked::before {
   font-weight: bold;
   font-size: 1.3em;
   border: solid 2px white;
-}
-
-/*****************LORRRR***********************/
-
-#timer {
-  margin: 0 150px;
-  text-align: center;
-  float: right;
-}
-
-#seconds {
-  font-size: 3.5em;
-  margin: 0;
-  line-height: 65px;
-}
-
-.innerP {
-  margin: 0;
-  font-size: 0.7em;
-}
-
-#questionContainer {
-  text-align: center;
-}
-
-#headerQuestion {
-  text-align: left;
-}
-
-#question {
-  font-size: 3em;
-  margin-top: 200px;
-}
-
-.btnAnswer {
-  background: rgba(197, 154, 154, 0.1);
-  border-radius: 60px;
-  font-size: 1.5em;
-  color:white;
-  margin: 30px;
-  box-shadow: 0 -3.2px 0.4px white;
-  box-sizing: border-box;
-  width: 570px;
-  height: 100px;
-}
-
-#answers {
-  padding: 5em;
-  margin-bottom: 80px;
-}
-
-#questionNumber {
-  font-size: 2em;
-}
-
-.btnAnswer:hover {
   cursor: pointer;
-  color:white;
-}
-
-.btnAnswerBlue{
-  background-color:  #B40089;
-  color: white;
 }
 
 /**************************** REVIEW PAGE **********************/
