--- a/BuildWeek1/assets/css/style.css
+++ b/BuildWeek1/assets/css/style.css
@@ -334,6 +334,10 @@ input[type="checkbox"]:checked::before {
   cursor: pointer;
 }
 
+#rateUs:hover{
+  background-color: #00ffff15;
+}
+
 /**************************** REVIEW PAGE **********************/
 
 #reviewContainer main{
