--- a/BuildWeek1/assets/css/style.css
+++ b/BuildWeek1/assets/css/style.css
@@ -50,7 +50,7 @@ body {
 
 #welcomeContainer h1 {
   font-family: "Outfit", sans-serif;
-  font-size: 8em;
+  font-size: 6em;
   line-height: 0.8em;
   margin-top: 0.8em;
   margin-bottom: 0.5em;
@@ -169,6 +169,15 @@ input[type="checkbox"]::before {
 
 input[type="checkbox"]:checked::before {
   transform: scale(1);
+}
+
+#bottomBox{
+  margin-bottom: 3em;
+}
+
+#boxButton {
+  display: inline-block;
+  margin-left: 40%;
 }
 
 .offProceed {
@@ -318,10 +327,6 @@ input[type="checkbox"]:checked::before {
 #buttonRateUs {
   text-align: center;
   margin: 15px;
-}
-#boxButton {
-  display: inline-block;
-  margin-left: 50%;
 }
 
 #rateUs {
