--- a/BuildWeek1/assets/css/style.css
+++ b/BuildWeek1/assets/css/style.css
@@ -218,7 +218,7 @@ input[type="checkbox"]:checked::before {
 
 #question {
   font-size: 3em;
-  margin-top: 200px;
+  margin-top: 5em;
 }
 
 .btnAnswer {
@@ -226,18 +226,17 @@ input[type="checkbox"]:checked::before {
   border-radius: 60px;
   font-size: 1.5em;
   color:white;
-  margin: 30px;
+  margin: 0 4em 2em;
   box-shadow: 0 -3.2px 0.4px white;
   box-sizing: border-box;
-  width: 570px;
-  height: 100px;
+  width: 15em;
+  height: 3em;
 }
 
 
-
 #answers {
-  padding: 5em;
-  margin-bottom: 80px;
+  padding: 3em;
+  margin-bottom: 1em;
 }
 
 #questionNumber {
