--- a/BuildWeek1/assets/css/style.css
+++ b/BuildWeek1/assets/css/style.css
@@ -296,14 +296,17 @@ input[type="checkbox"]:checked::before {
   font-family: "Outfit", sans-serif;
   margin: 0;
 }
+
 #resultTitle h1 {
   margin-bottom: 0.4em;
 }
+
 #graphicResults {
   text-align: center;
   position: relative;
   margin-bottom: 130px;
 }
+
 #correctAnswers,
 #wrongAnswers {
   font-size: 1.8em;
@@ -313,6 +316,7 @@ input[type="checkbox"]:checked::before {
   margin: 40px 90px;
   font-family: "Outfit", sans-serif;
 }
+
 #correctAnswers h2:first-child,
 #wrongAnswers h2:first-child {
   font-weight: normal;
@@ -322,10 +326,21 @@ input[type="checkbox"]:checked::before {
   font-size: smaller;
 }
 
-#myCanvas {
+.myCanvasCorrect {
   position: absolute;
   top: -110px;
   left: -110px;
+}
+
+.myCanvasWrong{
+  position: absolute;
+  top: -200px;
+  left: -107px;
+}
+
+.innerResultWrong{
+  position: relative;
+  top: -60px;
 }
 
 .align {
