--- a/BuildWeek1/assets/css/style.css
+++ b/BuildWeek1/assets/css/style.css
@@ -143,6 +143,7 @@ select::-ms-expand {
   display: inline-block;
   font-weight: 500;
   font-size: 1.1em;
+  margin-bottom: 3em;
 }
 
 input[type="checkbox"] {
