up prigetto settimana 6

--- a/EserciziSettimana06/ProgettoSettimana6_05_05_23/assets/css/myApp.css
+++ b/EserciziSettimana06/ProgettoSettimana6_05_05_23/assets/css/myApp.css
@@ -13,7 +13,6 @@
 .purpleText {
   color: #BCA8FF;
   font-size: 1.2em;
-  width: 23em;
 }
 
 .hero {
@@ -80,4 +79,25 @@
 }
 #terms li {
   display: inline;
+  margin-right: 5em;
+}
+
+.me-6 {
+  margin-right: 5em;
+}
+
+#greenDot {
+  background-color: #1ACB98;
+  bottom: -20%;
+  right: -12%;
+}
+
+#purpleDot {
+  background-color: #7550fe;
+  top: 20%;
+  right: 50%;
+}
+
+.p-6 {
+  padding: 0.4em;
 }/*# sourceMappingURL=myApp.css.map */
