site-name link to home

--- a/EserciziSettimana07/ProgettoSettimana7_12_05_23/assets/css/main.css
+++ b/EserciziSettimana07/ProgettoSettimana7_12_05_23/assets/css/main.css
@@ -11,4 +11,7 @@ body {
 header {
   color: white;
   background-color: #003049;
+}
+header a {
+  color: white;
 }/*# sourceMappingURL=main.css.map */
