creation of all html pages

--- a/EserciziSettimana07/ProgettoSettimana7_12_05_23/assets/css/main.css
+++ b/EserciziSettimana07/ProgettoSettimana7_12_05_23/assets/css/main.css
@@ -9,9 +9,16 @@ body {
 }
 
 header {
-  color: white;
   background-color: #003049;
 }
 header a {
   color: white;
+}
+
+#backOffice {
+  color: white;
+  background-color: #FF7F00;
+}
+#backOffice:hover {
+  background-color: #e67200;
 }/*# sourceMappingURL=main.css.map */
