--- a/EserciziSettimana07/ProgettoSettimana7_12_05_23/assets/css/main.css
+++ b/EserciziSettimana07/ProgettoSettimana7_12_05_23/assets/css/main.css
@@ -15,10 +15,10 @@ header a {
   color: white;
 }
 
-#backOffice {
+#btnPage {
   color: white;
   background-color: #FF7F00;
 }
-#backOffice:hover {
+#btnPage:hover {
   background-color: #e67200;
 }/*# sourceMappingURL=main.css.map */
