--- a/EserciziSettimana07/ProgettoSettimana7_12_05_23/assets/css/main.css
+++ b/EserciziSettimana07/ProgettoSettimana7_12_05_23/assets/css/main.css
@@ -1,3 +1,12 @@
+.btnBlue {
+  background-color: #003049;
+  color: white;
+}
+.btnBlue:hover {
+  background-color: #006296;
+  color: white;
+}
+
 #formButton {
   background-color: #fcbf49;
 }
