--- a/EserciziSettimana07/ProgettoSettimana7_12_05_23/assets/scss/_form.scss
+++ b/EserciziSettimana07/ProgettoSettimana7_12_05_23/assets/scss/_form.scss
@@ -21,6 +21,14 @@
     }
 }
 
+#deleteButton{
+    background-color: $red;
+    color: white;
+    &:hover{
+        background-color: darken($color: $red, $amount: 10);
+    }
+}
+
 .redError{
     color: $red;
 }
